Stop project technology text overlay spilling over

--- a/src/app/entities/projects/project/project.component.scss
+++ b/src/app/entities/projects/project/project.component.scss
@@ -53,7 +53,6 @@ $xxl: 1800px !default;
       .overlay-text {
         color: white;
         height: 100%;
-        padding: 1rem;
         position: absolute;
         text-align: center;
         width: 100%;
